--- a/coupon-eureka/src/main/resources/application.yml
+++ b/coupon-eureka/src/main/resources/application.yml
@@ -8,9 +8,13 @@ server:
 eureka:
   instance:
     # 主机名
-    hostname: localhost
+    hostname: 127.0.0.1
 
   client:
+    # 设置 Eureka Server 所在的地址, 查询服务和注册服务都需要依赖这个地址
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
     # 标识是否从 Eureka Server 获取注册信息, 默认是 true. 如果这是一个单节点的 Eureka Server
     # 不需要同步其他节点的数据, 设置为 false
     fetch-registry: false
@@ -19,10 +23,5 @@ eureka:
     # 需要设置为 false
     register-with-eureka: false
 
-    # 设置 Eureka Server 所在的地址, 查询服务和注册服务都需要依赖这个地址
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
   server:
     enable-self-preservation: false
-    # renewal-percent-threshold: 0.45
