--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>coupon-eureka</module>
         <module>coupon-gateway</module>
+        <module>coupon-service</module>
     </modules>
 
     <!--2.项目名称和描述（非必选）-->
