--- a/coupon-gateway/src/main/resources/application.yml
+++ b/coupon-gateway/src/main/resources/application.yml
@@ -14,3 +14,30 @@ eureka:
       fetch-registry: true
       # 是否将自己注册到 Eureka Server, 默认即为true，可省略
       register-with-eureka: true
+
+zuul:
+  prefix: /bw-coupon-zuul
+  routes:
+    # 优惠券模板微服务 路由配置定义
+    template:
+      # 网关只能通过路径进行转发，
+      # 这里利用每个微服务application.yml中定义的不同前缀来区分
+      # 对应的ServiceId即为定义的微服务应用名称
+      path: /template/**
+      serviceId: coupon-template
+      # 转发是否需要跳过前缀
+      # 如果微服务中的mapping没有带上这里的前缀，则应为false
+      strip-prefix: false
+  host:
+    # 连接微服务的超时时间
+    connect-timeout-millis: 15000
+    # TCP的超时时间
+    socket-timeout-millis: 6000
+
+# 负载均衡
+ribbon:
+  # 连接超时时间
+  ConnectTimeout: 15000
+  # 获取响应超时时间
+  ReadTimeout: 15000
+
