--- a/coupon-service/coupon-template/src/main/resources/application.yml
+++ b/coupon-service/coupon-template/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
   port: 7001
   servlet:
-    context-path: /coupon-template
+    # 微服务路径的前缀，zuul也靠此前缀进行区分微服务从而进行转发
+    context-path: /template
 
 spring:
-  # 此应用的名称
   application:
-    name: eureka-client-coupon-template
+    # 此应用的名称，对应zuul配置中不同转发的serviceId
+    name: coupon-template
   jpa:
     show-sql: true
     hibernate:
@@ -17,8 +18,8 @@ spring:
     open-in-view: false
   datasource:
     # 数据源
-    # autoReconnect=true&
-    url: jdbc:mysql://127.0.0.1:3308/coupon_data?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT
+    #
+    url: jdbc:mysql://127.0.0.1:3308/coupon_data?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT
     username: root
     password: 123456
     # 连接池，此处也为默认值
