--- a/coupon-service/coupon-distribution/pom.xml
+++ b/coupon-service/coupon-distribution/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>coupon-distribution</artifactId>
 
     <dependencies>
+        <!-- 自定义通用模块 -->
+        <dependency>
+            <groupId>com.bw.coupon</groupId>
+            <artifactId>coupon-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--
             Eureka 客户端, 客户端向 Eureka Server 注册的时候会提供一系列的元数据信息, 例如: 主机, 端口, 健康检查url等
             Eureka Server 接受每个客户端发送的心跳信息, 如果在某个配置的超时时间内未接收到心跳信息, 实例会被从注册列表中移除
@@ -35,11 +41,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
-        <!-- 引入 redis 的依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <!-- Java Persistence API, ORM 规范 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,18 +57,6 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>2.2.0.RELEASE</version>
-        </dependency>
-        <!-- 通用模块 -->
-        <dependency>
-            <groupId>com.bw.coupon</groupId>
-            <artifactId>coupon-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!-- apache 提供的一些工具类 -->
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.9</version>
         </dependency>
     </dependencies>
 
