--- a/coupon-service/coupon-distribution/src/main/resources/application.yml
+++ b/coupon-service/coupon-distribution/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 7002
   servlet:
-    context-path: /coupon-distribution
+    context-path: /distribution
 
 spring:
   application:
-    name: eureka-client-coupon-distribution
+    name: coupon-distribution
   jpa:
     show-sql: true
     hibernate:
@@ -16,9 +16,10 @@ spring:
     open-in-view: false
   datasource:
     # 数据源
-    url: jdbc:mysql://127.0.0.1:3308/coupon_data?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3308/coupon_data?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT
     username: root
     password: 123456
+    # 连接池，此处也为默认值
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 连接池
@@ -29,7 +30,7 @@ spring:
       connection-timeout: 30000
       max-lifetime: 45000
       auto-commit: true
-      pool-name: ImoocCouponHikariCP
+      pool-name: CouponHikariCP
   redis:
     database: 0
     host: 127.0.0.1
