--- a/coupon-service/coupon-settlement/pom.xml
+++ b/coupon-service/coupon-settlement/pom.xml
@@ -12,11 +12,13 @@
     <artifactId>coupon-settlement</artifactId>
 
     <dependencies>
+        <!-- 通用模块 -->
         <dependency>
             <groupId>com.bw.coupon</groupId>
             <artifactId>coupon-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Eureka客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
