--- a/coupon-service/coupon-distribution/src/main/resources/application.yml
+++ b/coupon-service/coupon-distribution/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 7002
-  servlet:
-    context-path: /distribution
+  # servlet:
+  #  context-path: /distribution
 
 spring:
   application:
