--- a/coupon-service/coupon-settlement/src/main/resources/application.yml
+++ b/coupon-service/coupon-settlement/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 7003
-  servlet:
-    context-path: /settlement
+  # servlet:
+  #  context-path: /settlement
 
 spring:
   application:
