--- a/module-common/pom.xml
+++ b/module-common/pom.xml
@@ -3,23 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>module-permission</artifactId>
+        <artifactId>bw-coupon</artifactId>
         <groupId>com.bw.coupon</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>permission-common</artifactId>
+    <artifactId>module-common</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- 工程通用 模块 -->
+        <!-- 引入 Web 功能 -->
         <dependency>
-            <groupId>com.bw.coupon</groupId>
-            <artifactId>module-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
