--- a/module-coupon/coupon-common/pom.xml
+++ b/module-coupon/coupon-common/pom.xml
@@ -13,10 +13,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- 引入 Web 功能 -->
+        <!-- 工程通用 模块 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.bw.coupon</groupId>
+            <artifactId>module-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
