--- a/module-permission/permission-detector/pom.xml
+++ b/module-permission/permission-detector/pom.xml
@@ -9,17 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>permission-common</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>permission-detector</artifactId>
 
     <dependencies>
-        <!-- 工程通用 模块 -->
+        <!-- 通用模块 -->
         <dependency>
             <groupId>com.bw.coupon</groupId>
-            <artifactId>module-common</artifactId>
+            <artifactId>permission-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- 引入 Feign, 可以以声明的方式调用微服务 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
-
-
 </project>
