--- a/module-permission/pom.xml
+++ b/module-permission/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>permission-common</module>
         <module>permission-service</module>
+        <module>permission-detector</module>
     </modules>
 
     <dependencies>
