--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>module-coupon</module>
         <module>module-permission</module>
         <module>module-common</module>
+        <module>module-display</module>
     </modules>
 
     <!--2.项目名称和描述（非必选）-->
